# DigitalVault

./: README.md  start.sh
.github/workflows/: README.md
backend/: .env  Cargo.toml  README.md
backend/digitalvault_aws_s3/: Cargo.toml
backend/digitalvault_aws_s3/src/: lib.rs
backend/digitalvault_azure_blob/: Cargo.toml
backend/digitalvault_google_cloud/: Cargo.toml
backend/digitalvault_minio/: Cargo.toml
backend/digitalvault_minio/src/: client.rs  config.rs  copy.rs  delete.rs  download.rs  ensure.rs  integrity.rs  list.rs  metadata.rs  mod.rs  permissions.rs  search.rs  upload.rs  versioning.rs
backend/digitalvault_minio/tests/minio/: client_test.rs  copy_test.rs  delete_test.rs  download_test.rs  ensure_test.rs  integrity_test.rs  list_test.rs
backend/digitalvault_minio_manager/: Cargo.toml
backend/digitalvault_minio_manager/src/: client.rs  lib.rs  management_audit.rs  management_group.rs  management_policy.rs  management_role.rs  management_user.rs  manager_config.rs
backend/digitalvault_minio_manager/tests/: configtest.rs  management_audit_test.rs  management_group_test.rs  management_policy_test.rs  management_role_test.rs  management_user_test.rs  mod.rs
backend/src/: lib.rs
docker/: README.md  docker-compose.yml
docker/keycloak/commands/: ImportRealm.sh
docs/: ADR.md  Accounts-Plan.md  Backend-DRF.md  Backend-Domain.md  Backend-Endpoints.md  Backend-Services.md  Backend.md  DRN.md  Frontend.md  Infra.md  Repo.md
frontend/: README.md
proto/: README.md
