[workspace]
resolver = "2"
members = [
    ".",
    "digitalvault_aws_s3",
    "digitalvault_azure_blob",
    "digitalvault_google_cloud",
    "digitalvault_minio",
    "digitalvault_minio_manager"
]

[workspace.dependencies]
actix-web = "4.0"
async-trait = "0.1.50"
bb8 = "0.7"
bytes = "1.1"
dotenv = "0.15.0"
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-test = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }

