[package]
name = "digitalvault_minio_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { workspace = true }
tokio-test = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[test]]
name = "minio_manager_tests"
path = "tests/mod.rs"
